--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
     <title>Hello Web - Processing.js Test</title>
+    <script type="text/javascript" src="processing.js"></script>
 </head>
 <body>
     <h1>Processing.js Test</h1>
     <p>This is my first Processing.js web-based sketch:</p>
+    <canvas data-processing-sources="platformer_v02.pde"></canvas>
 </body>
 </html>
