--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Processing.js Test</h1>
     <p>This is my first Processing.js web-based sketch:</p>
-    <canvas data-processing-sources="platformer_v02.pde"></canvas>
+    <canvas data-processing-sources="test.pde"></canvas>
 </body>
 </html>
