--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
+<!doctype html>
+<?
+$url = "https://api.openweathermap.org/data/2.5/forecast?id=2886241&type=accurate&units=metric&mode=xml&APPID=baf12c4cd63ad729832998400da8d602";
+$getweather = simplexml_load_file($url);
+$gethumidity = $getweather->list->item->humidity['value'];
+$gettemp = $getweather->list->item->temperature['value'];
+?>
 <html>
 <head>
-    <title>Hello Web - Processing.js Test</title>
-    <script type="text/javascript" src="processing.js"></script>
+    <title>Weather Test</title>
+    <script></script>
 </head>
 <body>
-    <h1>Processing.js Test</h1>
-    <p>This is my first Processing.js web-based sketch:</p>
-    <canvas data-processing-sources="platformer_v02.pde"></canvas>
+    <h1>Wetter Test</h1>
+    <p>Das testet die Openweather API:</p>
+	<ul>
+		<li>Feuchtigkeit: <?echo($gethumidity)?>%</li>
+		<li>Temperatur: <?echo($gettemp)?> &deg;C<li/>
+	<ul/>
 </body>
 </html>
