--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <?
 $url = "https://api.openweathermap.org/data/2.5/weather?id=2886241&type=accurate&units=metric&mode=xml&APPID=baf12c4cd63ad729832998400da8d602";
 $getweather = simplexml_load_file($url);
-$gethumidity = $getweather->list->item->humidity['value'];
-$gettemp = $getweather->list->item->temperature['value'];
+$gethumidity = $getweather->city->humidity['value'];
+$gettemp = $getweather->city id="2886241" name="Regierungsbezirk Köln"->temperature['value'];
 ?>
 <html>
 <head>
