--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <?
 $url = "https://api.openweathermap.org/data/2.5/weather?id=2886241&type=accurate&units=metric&mode=xml&APPID=baf12c4cd63ad729832998400da8d602";
 $getweather = simplexml_load_file($url);
