--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ $gettemp = $getweather->city id="2886241" name="Regierungsbezirk Köln"->tempera
     <p>Das testet die Openweather API:</p>
 	<ul>
 		<li>Feuchtigkeit: <?echo($gethumidity)?>%</li>
-		<li>Temperatur: <?echo($gettemp)?> &deg;C<li/>
+		<li>Temperatur: <?echo('TEST')?> &deg;C<li/>
 	<ul/>
 </body>
 </html>
