--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<?
+<?php
 $url = "https://api.openweathermap.org/data/2.5/weather?id=2886241&type=accurate&units=metric&mode=xml&APPID=baf12c4cd63ad729832998400da8d602";
 $getweather = simplexml_load_file($url);
 $gethumidity = $getweather->city->humidity['value'];
@@ -14,8 +14,8 @@ $gettemp = $getweather->city id="2886241" name="Regierungsbezirk Köln"->tempera
     <h1>Wetter Test</h1>
     <p>Das testet die Openweather API:</p>
 	<ul>
-		<li>Feuchtigkeit: <?echo($gethumidity)?>%</li>
-		<li>Temperatur: <?echo('TEST')?> &deg;C<li/>
+		<li>Feuchtigkeit: <?php echo($gethumidity)?>%</li>
+		<li>Temperatur: <?php echo('TEST')?> &deg;C<li/>
 	<ul/>
 </body>
 </html>
